--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 aoc-runner = "0.2.2"
 aoc-runner-derive = "0.2.2"
 petgraph = "0.4.13"
+ndarray = "0.13.0"
+ndarray-stats = "0.3"
